1.1.1 (X)
    * Exclude ourselves from recent activities list (suggested by Mariano
      Kamp).
    * Better handle quick toggling, by reusing an existing toast rather
      than queuing them.
    * Added German localization.

1.1.0 (2009-03-12)
    * Added boot persistence.
    * Fixed Typo in toast message.

1.0.1 (2009-02-25)
    * No longer show notifications when service is auto-restarted by Android.

1.0.0 (2009-02-24)
    Initial release.